--- a/DirectoryUtility/DirectoryUtility/DirectoryUtility.csproj
+++ b/DirectoryUtility/DirectoryUtility/DirectoryUtility.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeleteOldFilesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeleteOldFilesForm.Designer.cs">
+      <DependentUpon>DeleteOldFilesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,7 +58,11 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DeleteOldFilesForm.resx">
+      <DependentUpon>DeleteOldFilesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
